Formatando Aquivos usando Ruff

--- a/Series/dataFrame.ipynb
+++ b/Series/dataFrame.ipynb
@@ -19,10 +19,21 @@
     "\n",
     "# Ou podemos comparar o DataFrame como uma planilha, onde cada coluna é uma Series e cada linha é um registro.\n",
     "idades = [33, 31, 27, 26, 18, 52, 39, 33, 30, 42]\n",
-    "nomes = ['Ana', 'Bruno', 'Carlos', 'Daniel', 'Eduardo', 'Fernanda', 'Gabriel', 'Henrique', 'Igor', 'Juliana']\n",
+    "nomes = [\n",
+    "    \"Ana\",\n",
+    "    \"Bruno\",\n",
+    "    \"Carlos\",\n",
+    "    \"Daniel\",\n",
+    "    \"Eduardo\",\n",
+    "    \"Fernanda\",\n",
+    "    \"Gabriel\",\n",
+    "    \"Henrique\",\n",
+    "    \"Igor\",\n",
+    "    \"Juliana\",\n",
+    "]\n",
     "\n",
     "series_idade = pd.Series(idades)\n",
-    "series_nomes = pd.Series(nomes)\n"
+    "series_nomes = pd.Series(nomes)"
    ]
   },
   {
@@ -208,8 +219,8 @@
    ],
    "source": [
     "df = pd.DataFrame()\n",
-    "df['idades'] = series_idade\n",
-    "df['nomes'] = series_nomes\n",
+    "df[\"idades\"] = series_idade\n",
+    "df[\"nomes\"] = series_nomes\n",
     "df"
    ]
   },
@@ -256,7 +267,7 @@
     }
    ],
    "source": [
-    "df.iloc[0]['nomes']"
+    "df.iloc[0][\"nomes\"]"
    ]
   },
   {
@@ -276,7 +287,7 @@
     }
    ],
    "source": [
-    "df.iloc[-1]['idades']"
+    "df.iloc[-1][\"idades\"]"
    ]
   }
  ],
