--- a/DataFrames/dataframes.ipynb
+++ b/DataFrames/dataframes.ipynb
@@ -900,7 +900,9 @@
     }
    ],
    "source": [
-    "df_clientes.info(memory_usage='deep')  # mostra informações sobre o DataFrame e o uso de memória"
+    "df_clientes.info(\n",
+    "    memory_usage=\"deep\"\n",
+    ")  # mostra informações sobre o DataFrame e o uso de memória"
    ]
   },
   {
@@ -930,7 +932,7 @@
     }
    ],
    "source": [
-    "df_clientes.dtypes # mostra os tipos de dados de cada coluna"
+    "df_clientes.dtypes  # mostra os tipos de dados de cada coluna"
    ]
   },
   {
