--- a/DataFrames/renomear_colunas.ipynb
+++ b/DataFrames/renomear_colunas.ipynb
@@ -38,7 +38,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.info(memory_usage = 'deep')"
+    "df.info(memory_usage=\"deep\")"
    ]
   },
   {
@@ -60,7 +60,7 @@
    "source": [
     "# Renomear colunas , no dicionario passar o nome atual da coluna e o novo\n",
     "# O inplace = True faz com que a mudança seja feita no proprio dataframe, não precisando atribuir a um novo df = df.rename(...)\n",
-    "df.rename(columns = {'qtdePontos': 'qtPontos'}, inplace = True)"
+    "df.rename(columns={\"qtdePontos\": \"qtPontos\"}, inplace=True)"
    ]
   },
   {
@@ -81,7 +81,9 @@
    "outputs": [],
    "source": [
     "# Retornando 2 colunas do dataframe\n",
-    "df[['idCliente', 'qtPontos']] # Isso aqui me retorna um dataframe, porque estou acessando os valores através de uma lista"
+    "df[\n",
+    "    [\"idCliente\", \"qtPontos\"]\n",
+    "]  # Isso aqui me retorna um dataframe, porque estou acessando os valores através de uma lista"
    ]
   },
   {
@@ -91,7 +93,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df['descSistemaOrigem'] # Isso aqui retorna uma série, não um dataframe, porque estou acessando um indíce único"
+    "df[\n",
+    "    \"descSistemaOrigem\"\n",
+    "]  # Isso aqui retorna uma série, não um dataframe, porque estou acessando um indíce único"
    ]
   }
  ],
