--- a/Converter/con_tipo.ipynb
+++ b/Converter/con_tipo.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 24,
    "id": "85daa86c",
    "metadata": {},
    "outputs": [],
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 25,
    "id": "1661a6b9",
    "metadata": {},
    "outputs": [
@@ -72,7 +72,7 @@
         }
        ],
        "conversionMethod": "pd.DataFrame",
-       "ref": "23c7f4b4-cf13-4bc6-a18b-76c5eb2e0676",
+       "ref": "771e4b60-e6ce-4a28-8e8d-a9cbb6aa4d38",
        "rows": [
         [
          "0",
@@ -891,19 +891,19 @@
        "[2436 rows x 9 columns]"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df = pd.read_csv('../data/clientes.csv')\n",
+    "df = pd.read_csv(\"../data/clientes.csv\")\n",
     "df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 26,
    "id": "4c2d25dd",
    "metadata": {},
    "outputs": [
@@ -924,18 +924,18 @@
        "Name: qtdePontos, Length: 2436, dtype: object"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df['qtdePontos'].astype('int').astype('str')"
+    "df[\"qtdePontos\"].astype(\"int\").astype(\"str\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 27,
    "id": "1db5d085",
    "metadata": {},
    "outputs": [
@@ -995,7 +995,7 @@
         }
        ],
        "conversionMethod": "pd.DataFrame",
-       "ref": "20396c45-9737-4a3d-ae56-0e4a7a716c9a",
+       "ref": "d6fb0d36-c5f5-4b39-ae5e-aedd6f80d42b",
        "rows": [
         [
          "0",
@@ -1814,14 +1814,14 @@
        "[2436 rows x 9 columns]"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "replace = {\"0000-00-00 00:00:00.000\": \"2024-02-01 09:00:00.000\"}\n",
-    "df['dtCriacao'] = pd.to_datetime(df['dtCriacao'].replace(replace))\n",
+    "df[\"dtCriacao\"] = pd.to_datetime(df[\"dtCriacao\"].replace(replace))\n",
     "df"
    ]
   },
@@ -1830,22 +1830,8 @@
    "execution_count": null,
    "id": "558df571",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "'Series' object is not callable",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mTypeError\u001b[39m                                 Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[22]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m \u001b[43mdf\u001b[49m\u001b[43m[\u001b[49m\u001b[33;43m'\u001b[39;49m\u001b[33;43mdtCriacao\u001b[39;49m\u001b[33;43m'\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m.\u001b[49m\u001b[43mdt\u001b[49m\u001b[43m.\u001b[49m\u001b[43mmonth\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
-      "\u001b[31mTypeError\u001b[39m: 'Series' object is not callable"
-     ]
-    }
-   ],
-   "source": [
-    "\n"
-   ]
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
