--- a/Duplicatas/duplicatas.ipynb
+++ b/Duplicatas/duplicatas.ipynb
@@ -35,20 +35,50 @@
    "source": [
     "# Listas para gerar nomes fictícios\n",
     "nomes = [\n",
-    "    \"Ana\", \"Bruno\", \"Carlos\", \"Daniela\", \"Eduardo\", \"Fernanda\", \"Gabriel\", \"Helena\", \n",
-    "    \"Igor\", \"Julia\", \"Karla\", \"Lucas\", \"Mariana\", \"Natasha\", \"Otavio\", \"Paula\", \n",
-    "    \"Rafael\", \"Sofia\", \"Tiago\", \"Vanessa\"\n",
+    "    \"Ana\",\n",
+    "    \"Bruno\",\n",
+    "    \"Carlos\",\n",
+    "    \"Daniela\",\n",
+    "    \"Eduardo\",\n",
+    "    \"Fernanda\",\n",
+    "    \"Gabriel\",\n",
+    "    \"Helena\",\n",
+    "    \"Igor\",\n",
+    "    \"Julia\",\n",
+    "    \"Karla\",\n",
+    "    \"Lucas\",\n",
+    "    \"Mariana\",\n",
+    "    \"Natasha\",\n",
+    "    \"Otavio\",\n",
+    "    \"Paula\",\n",
+    "    \"Rafael\",\n",
+    "    \"Sofia\",\n",
+    "    \"Tiago\",\n",
+    "    \"Vanessa\",\n",
     "]\n",
     "sobrenomes = [\n",
-    "    \"Silva\", \"Santos\", \"Oliveira\", \"Souza\", \"Lima\", \"Pereira\", \"Costa\", \"Almeida\", \n",
-    "    \"Ribeiro\", \"Carvalho\", \"Mendes\", \"Ferreira\", \"Rodrigues\", \"Martins\", \"Gomes\"\n",
+    "    \"Silva\",\n",
+    "    \"Santos\",\n",
+    "    \"Oliveira\",\n",
+    "    \"Souza\",\n",
+    "    \"Lima\",\n",
+    "    \"Pereira\",\n",
+    "    \"Costa\",\n",
+    "    \"Almeida\",\n",
+    "    \"Ribeiro\",\n",
+    "    \"Carvalho\",\n",
+    "    \"Mendes\",\n",
+    "    \"Ferreira\",\n",
+    "    \"Rodrigues\",\n",
+    "    \"Martins\",\n",
+    "    \"Gomes\",\n",
     "]\n",
     "\n",
     "# Gerando os dados base (90 linhas únicas)\n",
     "data = {\n",
     "    \"nome\": [f\"{random.choice(nomes)} {random.choice(sobrenomes)}\" for _ in range(90)],\n",
     "    \"idade\": [random.randint(18, 70) for _ in range(90)],\n",
-    "    \"salario\": [round(random.uniform(2000, 15000), 2) for _ in range(90)]\n",
+    "    \"salario\": [round(random.uniform(2000, 15000), 2) for _ in range(90)],\n",
     "}\n",
     "df = pd.DataFrame(data)\n",
     "\n",
@@ -529,7 +559,7 @@
    ],
    "source": [
     "# Sendo assim, quando eu remover as duplicatas ele precisa voltar a ter 90 linhas\n",
-    "df = df_com_duplicatas.sort_values(by='salario', ascending=False).drop_duplicates()\n",
+    "df = df_com_duplicatas.sort_values(by=\"salario\", ascending=False).drop_duplicates()\n",
     "df"
    ]
   },
