--- a/Novas Colunas/sort.ipynb
+++ b/Novas Colunas/sort.ipynb
@@ -17,7 +17,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv('../data/clientes.csv')"
+    "df = pd.read_csv(\"../data/clientes.csv\")"
    ]
   },
   {
@@ -166,8 +166,8 @@
     }
    ],
    "source": [
-    "max_pontos = df['qtdePontos'].max()\n",
-    "df[df['qtdePontos'] == max_pontos]"
+    "max_pontos = df[\"qtdePontos\"].max()\n",
+    "df[df[\"qtdePontos\"] == max_pontos]"
    ]
   },
   {
@@ -193,7 +193,7 @@
     }
    ],
    "source": [
-    "top_5 = df['qtdePontos'].nlargest(5)\n",
+    "top_5 = df[\"qtdePontos\"].nlargest(5)\n",
     "top_5"
    ]
   },
@@ -660,20 +660,50 @@
     "\n",
     "# Criando um DF dummy\n",
     "nomes = [\n",
-    "    \"Ana\", \"Bruno\", \"Carlos\", \"Daniela\", \"Eduardo\", \"Fernanda\", \"Gabriel\", \"Helena\", \n",
-    "    \"Igor\", \"Julia\", \"Karla\", \"Lucas\", \"Mariana\", \"Natasha\", \"Otavio\", \"Paula\", \n",
-    "    \"Rafael\", \"Sofia\", \"Tiago\", \"Vanessa\"\n",
+    "    \"Ana\",\n",
+    "    \"Bruno\",\n",
+    "    \"Carlos\",\n",
+    "    \"Daniela\",\n",
+    "    \"Eduardo\",\n",
+    "    \"Fernanda\",\n",
+    "    \"Gabriel\",\n",
+    "    \"Helena\",\n",
+    "    \"Igor\",\n",
+    "    \"Julia\",\n",
+    "    \"Karla\",\n",
+    "    \"Lucas\",\n",
+    "    \"Mariana\",\n",
+    "    \"Natasha\",\n",
+    "    \"Otavio\",\n",
+    "    \"Paula\",\n",
+    "    \"Rafael\",\n",
+    "    \"Sofia\",\n",
+    "    \"Tiago\",\n",
+    "    \"Vanessa\",\n",
     "]\n",
     "sobrenomes = [\n",
-    "    \"Silva\", \"Santos\", \"Oliveira\", \"Souza\", \"Lima\", \"Pereira\", \"Costa\", \"Almeida\", \n",
-    "    \"Ribeiro\", \"Carvalho\", \"Mendes\", \"Ferreira\", \"Rodrigues\", \"Martins\", \"Gomes\"\n",
+    "    \"Silva\",\n",
+    "    \"Santos\",\n",
+    "    \"Oliveira\",\n",
+    "    \"Souza\",\n",
+    "    \"Lima\",\n",
+    "    \"Pereira\",\n",
+    "    \"Costa\",\n",
+    "    \"Almeida\",\n",
+    "    \"Ribeiro\",\n",
+    "    \"Carvalho\",\n",
+    "    \"Mendes\",\n",
+    "    \"Ferreira\",\n",
+    "    \"Rodrigues\",\n",
+    "    \"Martins\",\n",
+    "    \"Gomes\",\n",
     "]\n",
     "\n",
     "# Gerando os dados\n",
     "data = {\n",
     "    \"nome\": [f\"{random.choice(nomes)} {random.choice(sobrenomes)}\" for _ in range(100)],\n",
     "    \"idade\": [random.randint(18, 70) for _ in range(100)],\n",
-    "    \"salario\": [round(random.uniform(2000, 15000), 2) for _ in range(100)]\n",
+    "    \"salario\": [round(random.uniform(2000, 15000), 2) for _ in range(100)],\n",
     "}\n",
     "\n",
     "# Criando o DataFrame\n",
@@ -1142,7 +1172,7 @@
     }
    ],
    "source": [
-    "df_dummy.sort_values(by=['salario', 'idade'], ascending=[False, True])"
+    "df_dummy.sort_values(by=[\"salario\", \"idade\"], ascending=[False, True])"
    ]
   }
  ],
