--- a/Novas Colunas/newcolumns.ipynb
+++ b/Novas Colunas/newcolumns.ipynb
@@ -265,7 +265,7 @@
     }
    ],
    "source": [
-    "df = pd.read_csv('../data/clientes.csv')\n",
+    "df = pd.read_csv(\"../data/clientes.csv\")\n",
     "df.head()"
    ]
   },
@@ -541,7 +541,7 @@
    "source": [
     "# Add 100 to the 'qtdePontos' column and create a new column 'pontosalterados'\n",
     "# This will not modify the original 'qtdePontos' column\n",
-    "df['pontosalterados'] = df['qtdePontos'] + 100\n",
+    "df[\"pontosalterados\"] = df[\"qtdePontos\"] + 100\n",
     "df.sample(5)"
    ]
   },
@@ -571,8 +571,8 @@
     }
    ],
    "source": [
-    "df['logPontos'] = np.log(df['qtdePontos']+1)\n",
-    "df['logPontos'].describe()"
+    "df[\"logPontos\"] = np.log(df[\"qtdePontos\"] + 1)\n",
+    "df[\"logPontos\"].describe()"
    ]
   },
   {
@@ -603,8 +603,8 @@
     }
    ],
    "source": [
-    "plt.hist(df['logPontos'], bins=30, edgecolor='black')\n",
-    "plt.title('Distribuição de logPontos')\n",
+    "plt.hist(df[\"logPontos\"], bins=30, edgecolor=\"black\")\n",
+    "plt.title(\"Distribuição de logPontos\")\n",
     "plt.show()"
    ]
   },
